...
                android:contentDescription="@string/recipe_image"
                android:scaleType="centerCrop"
                android:textAppearance="?attr/textAppearanceListItem"
                tools:src="@drawable/brownies" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
...
